--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -28,6 +30,11 @@
         width: 100%;
         position: relative;
         display: inline-block;
+      }
+      .ol-attribution.ol-uncollapsible {
+        bottom: 6px !important;
+        right: 6px !important;
+        height: unset !important;
       }
     </style>
     <title>BMS - Borehole Management System</title>
