--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         height: unset !important;
       }
     </style>
-    <title>BMS - Borehole Management System</title>
+    <title>Borehole Management System of Switzerland</title>
   </head>
   <body>
     <noscript>
