refactoring and ex. mode search improved

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         height: unset !important;
       }
     </style>
-    <title>Borehole Management System</title>
+    <title>Boreholes of Switzerland</title>
   </head>
   <body>
     <noscript>
