--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link type="text/plain" rel="author" href="humans.txt" />
+    <script src="%PUBLIC_URL%/api/v1/content/login"></script>
     <!--
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="%PUBLIC_URL%/fonts/fonts.css" rel="stylesheet">
+
     <style>
       .react-datepicker-wrapper {
         width: 100%;
